Шапка полностью готова

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="header__rec-text" aria-hidden="true"><p>rec</p></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +44,19 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title">no focus</h1>
+      <div class="header__block">
+        <p class="header__block-content title-decor">Что делать, когда не можешь делать ничего 
+          <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      </div>
     </header>
+    <main>
+     <section class="content__section">
+      <div class="content"> <p>sdfadsffgdzsf Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Similique unde minima sit eius enim soluta recusandae fugiat expedita iste, p
+        erferendis cumque eos error? Repudiandae ipsum nisi cum beatae sunt quod.</p></div>
+      </section>
+    </main>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
