--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__rec-text" aria-hidden="true"><p>rec</p></div>
+      <div class="rec-text" aria-hidden="true"><p>rec</p></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -216,6 +216,9 @@
         />
       </section>
     </main>
+    <footer class="footer decorated-zone">
+      <h5 class="footer__title">focus</h5>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
