поправил после автотестов

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="color-scheme" content="dark light"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="any"/>
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml"/>
-    <link rel="stylesheet" href="./styles/variables.css"/>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/globals.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
-    <link rel="stylesheet" href="./styles/dark.css"/>
-    <link rel="stylesheet" href="./styles/light.css"/>
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -189,31 +189,31 @@
         alt="на картинке парящие в небе птицы на фоне гор и вечернего заката"
         class="gallery section__gallery-mountains"
         loading="lazy"
-        />
+        >
         <img
         src="./images/ice-cream.png"
         alt="на картинке тарелка с шаровидной прозрачной крышкой. Внутри различное мороженное в виде смайликов и эскимо"
         class="gallery section__gallery-ice-cream"
         loading="lazy"
-        />
+        >
         <img
         src="./images/tape.png"
         alt="на картинке заставка рабочего стола монитора с изображением касеты на магнитной ленте на фонеоблоков"
         class="gallery section__gallery-ice-tape"
         loading="lazy"
-        />
+        >
         <img
         src="./images/books.png"
         alt="на картинке стопка книг на столе на фоне стены, на стене обои с маленькими редкими рисунками снежинок"
         class="gallery section__gallery-books"
         loading="lazy"
-        />
+        >
         <img
         src="./images/street.png"
         alt="на картинке пустая улица, под ногами пешеходный переход, слева и справа дома, впереди забор, за забором деревья"
         class="gallery section__gallery-street"
         loading="lazy"
-        />
+        >
       </section>
     </main>
     <footer class="footer decorated-zone">
