--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Сложно сосредоточиться</title>
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="rec-text" aria-hidden="true"><p>rec</p></div>
+      <div class="rec-text" aria-hidden="true"><span>rec</span></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -55,20 +55,20 @@
     <main class="content">
       <section class="content__section content__section-why">
         <h2 class="main__title-second">Почему сосредоточиться так сложно</h2>
-        <div class="content__block-first">
+        <article class="content__block-first">
           <h3 class="title-decor main__title-third">Многозадачность</h3>
           <p class="content__section-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a class="link__text" href="#" target="_blank">выяснили</a>, что
+            <a class="link__text" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что
             мозгу тяжело концентрироваться даже на двух делах одновременно. А
             когда в поле внимания попадает несколько важных задач, организм
             паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
             этого мы работаем невнимательно: ошибаемся и быстро устаём.
           </p>
-        </div>
+        </article>
         <div class="content__block-second">
           <h3 class="title-decor main__title-third">Дофамин</h3>
           <p class="content__section-text">
@@ -85,7 +85,7 @@
       </section>
       <section class="content__section content__section-what">
         <h2 class="main__title-second">Что снижает концентрацию внимания?</h2>
-        <div class="content__block-first">
+        <article class="content__block-first">
           <h3 class="title-decor main__title-third">Многозадачность</h3>
           <p class="content__section-text">
             Как концентрация может снижаться из-за… концентрации? Любая
@@ -95,7 +95,7 @@
             — невозможно. Концентрация — мышца, и она может не выдержать, если
             не давать ей отдохнуть.
           </p>
-        </div>
+        </article>
         <div class="content__block-second">
           <h3 class="title-decor main__title-third">Еда</h3>
           <p class="content__section-text">
@@ -156,7 +156,7 @@
           <h4 class="title-decor section-how-title">Прогуляйтесь</h4>
           <p class="content__section-text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a class="link__text" href="#" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время
+            <a class="link__text" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время
             как после просмотра городских пейзажей она наоборот понижается.
             Можно совместить прогулку с физическими упражнениями или бегом — так
             в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
@@ -183,7 +183,7 @@
         </div>
       </section>
       <section class="content__section content__section-gallery">
-        <h3 class="title-decor main__title-third">А можно в картинках?</h3>
+        <h2 class="title-decor main__title-third">А можно в картинках?</h2>
         <img
         src="./images/sunset.png"
         alt="на картинке парящие в небе птицы на фоне гор и вечернего заката"
@@ -217,7 +217,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h5 class="footer__title">focus</h5>
+      <h2 class="footer__title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
